--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -60,3 +60,8 @@
 [prune]
   go-tests = true
   unused-packages = true
+
+[[override]]
+  name = "github.com/json-iterator/go"
+  revision = "f2b4162afba35581b6d4a50d3b8f34e33c144682"
+  
